Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/flow/T8030218/CompileTimeErrorForNonAssignedStaticFieldTest.out
CompileTimeErrorForNonAssignedStaticFieldTest.java:14:5: compiler.err.var.might.not.have.been.initialized: i
1 error
